# Japanese-Dictionary

./: README.md  pyproject.toml
japanese_dictionary/: main.py  word.py
tests/: test.py
