[tool.poetry]
name = "japanese-dictionary"
version = "0.1.0"
description = ""
authors = ["rob <rcgr.13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
flake8 = "^7.1.2"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
